added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
    <h1>My simple website</h1>
+   <div class="first">
+    <h3>my first vlog</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nostrum totam quia officia id ipsum reprehenderit, esse fugit nulla autem numquam omnis porro, accusamus natus quas nam minima quasi laboriosam.</p>
+   </div>
 </body>
 </html>
