added the second commit

--- a/index.html
+++ b/index.html
@@ -12,5 +12,17 @@
     <h3>my first vlog</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nostrum totam quia officia id ipsum reprehenderit, esse fugit nulla autem numquam omnis porro, accusamus natus quas nam minima quasi laboriosam.</p>
    </div>
+   <div class="first">
+    <h3>my first vlog</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nostrum totam quia officia id ipsum reprehenderit, esse fugit nulla autem numquam omnis porro, accusamus natus quas nam minima quasi laboriosam.</p>
+   </div>
+   <div class="first">
+    <h3>my second vlog</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nostrum totam quia officia id ipsum reprehenderit, esse fugit nulla autem numquam omnis porro, accusamus natus quas nam minima quasi laboriosam.</p>
+   </div>
+   <div class="first">
+    <h3>my third vlog</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident nostrum totam quia officia id ipsum reprehenderit, esse fugit nulla autem numquam omnis porro, accusamus natus quas nam minima quasi laboriosam.</p>
+   </div>
 </body>
 </html>
